--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url("/node_modules/@fortawesome/fontawesome-free/css/all.min.css");
+
 header {
   background-color: #279989;
   display: flex;
